Fix SSL committed interstitials bugs when interacting with other CI.

The following bugs appeared when SB interstitials were being converted
to committed interstitials:

-SSLErrorNavigationThrottle will not respect the cert whitelist when
WillFailRequest is triggered by other interstitials. This CL adds a
check.

-DidStartResourceResponse is called on SSLManager on all network
errors, which are treated as valid SSL by the manager and cause cert
exceptions to be cleared, this also happened prior to CI, but became
obvious with Safe Browsing tests. This CL fixes this by only calling
DidStartResourceResponse on net::OK.

Bug: 869894
Change-Id: Ia1ce4a3130bf03ef7686ff2149a9ed49fb20c81b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1504052
Commit-Queue: Carlos IL <carlosil@chromium.org>
Reviewed-by: Emily Stark <estark@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#639748}
Former-commit-id: 94a6b7122ec29834903977e3df1b7efcf15a0cc6